# parsec-sdk

./: .gitignore  CMakeLists.txt
cmake/: CTestConfig.cmake  Config.cmake.in  FindCoreVideo.cmake  FindIOKit.cmake  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
examples/client/: CMakeLists.txt
sdk/: CMakeLists.txt
